welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:21: error: type mismatch;
 found   : Unit
 required: Boolean
    res = true
        ^ColumnByColumn:20: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getX()==a && getY()==b) {
  ^